--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -221,10 +221,29 @@ section{
 }
 .blogs .blogs-row .box .img img{
     width: 100%;
+    padding: 5rem;
 }
-
-
-
+.blogs .blogs-row .box .content{
+    flex: 1 1 45rem;
+    padding: 2rem;
+}
+.blogs .blogs-row .box .content h3{
+    font-size: 3.5rem;
+    color: var(--black);
+}
+.blogs .blogs-row .box .content p{
+    font-size: 1.6rem;
+    color: var(--black);
+    padding: 1rem 0;
+    line-height: 1.8;
+}
+.blogs .blogs-row .box .content a{
+    font-size: 2rem; cursor: pointer;
+}
+.blogs .blogs-row .box .content a:hover{
+    color: var(--black); text-decoration: underline;
+    text-shadow: var(--box-shadow);
+}
 
 
 /* media queries for web responsive */
