--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -248,7 +248,119 @@ color: var(--black);
     color: var(--black); text-decoration: underline;
     text-shadow: var(--box-shadow);
 }
-
+/* newsletter */
+.newsletter{
+    background: url(/Images/new.jpg) no-repeat;
+    background-size: cover; background-attachment: fixed;
+    background-position: center center;
+}
+.newsletter form{
+    max-width: 45rem;
+    text-align: center; padding: 5rem 0;
+}
+.newsletter form h3{
+    font-size: 3rem; padding-bottom: .7rem;
+    color: var(--white);
+}
+.newsletter form .box{
+    width: 100%; margin: .7rem 0;
+    padding: 1rem 1.2rem;
+    color: var(--black); border-radius: .5rem;
+}
+.newsletter form .box2{
+    width: 50%; font-size: 1.5rem;
+    background: var(--black); color: var(--white);
+    border-radius: 3rem; padding: .5rem;
+    margin-top: 1rem;
+}
+/* review */
+.review .review-row{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+.review .review-row .box{
+    width: 50%; padding: 3rem;
+    margin-bottom: 3rem;
+    box-shadow: var(--box-shadow); 
+    border-radius: 3rem;
+    background-color: var(--white);
+}
+.review .review-row .box .client-review{
+    margin-bottom: 3rem; 
+}
+.review .review-row .box .client-review p{
+    font-size: 2.5rem; text-align: center;
+    line-height: 1.5;
+}
+.review .review-row .box .client-info{
+    display: flex; align-items: center;
+}
+.review .review-row .box .client-info .img{
+    padding-right: 3rem;
+}
+.review .review-row .box .client-info .img img{
+    width: 7rem; height: 7rem;
+    clip-path: circle(50% at 50% 50%);
+}
+.review .review-row .box .client-info .clientName h3{
+    font-size: 2.5rem;
+}
+.review .review-row .box .client-info .clientName p{
+    font-size: 1.5rem;
+}
+/* footer */
+.footer{
+    background: url(/Images/backGround.png) no-repeat;
+    background-size: cover; background-position: center center;
+}
+.footer .box-container{
+    display: grid; gap: 1.5rem; padding: 2rem 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+}
+.footer .box-container .mainBox .content{
+    display: flex; align-items: center;
+    margin-bottom: 2rem;
+}
+.footer .box-container .content h1{
+    font-size: 2rem; color: var(--black);
+}
+.footer .box-container .mainBox p{
+    font-size: 1.7rem; line-height: 1.3;
+    margin-bottom: 2rem;
+}
+.footer .box-container .box h3{
+    font-size: 2.2rem; color: var(--black);
+    padding: 1rem 0
+}
+.footer .box-container .box a{
+    display: block; font-size: 1.4rem;
+    color: var(--black); padding: 1rem 0;
+}
+.footer .box-container .box a i{
+    padding-right: .5rem;
+    color: var(--black);
+}
+.footer .box-container .box a:hover i{
+    padding-right: 2rem;
+}
+.footer .share{
+    padding: 1rem 0; text-align: center;
+}
+.footer .share a{
+    height: 4rem; width: 4rem;
+    line-height: 4rem; font-size: 2rem;
+    background-color: var(--black); color: var(--white);
+    margin: 0 .3rem; border-radius: 50%;
+}
+.footer .share a:hover{
+    background-color: var(--white); color: var(--black);
+}
+.footer .credit
+    font-size: 2rem; margin-top: 2rem 0;
+    padding-bottom: 2rem; text-align: center;
+    color: var(--black);
+}
 
 /* media queries for web responsive */
 
